@@ -32,10 +32,10 @@ def initialize_stars():
 		star = init_star()
 		vel, pos = star
 		steps = random.randint(0, WINCENTER[0])
-		pos[0] += vel[0] * steps
-		pos[1] += vel[1] * steps
-		vel[0] *= steps * .09
-		vel[1] *= steps * .09
+		pos[0] = pos[0] + (vel[0] * steps)
+		pos[1] = pos[1] + (vel[1] * steps)
+		vel[0] = vel[0] * (steps * .09)
+		vel[1] = vel[1] * (steps * .09)
 		stars.append(star)
 	move_stars(stars)
 	return stars
@@ -50,13 +50,13 @@ def draw_stars(surface, stars, color):
 def move_stars(stars):
 	"animate the star values"
 	for vel, pos in stars:
-		pos[0] += vel[0]
-		pos[1] += vel[1]
+		pos[0] = pos[0] + vel[0]
+		pos[1] = pos[1] + vel[1]
 		if not 0 <= pos[0] <= WINSIZE[0] or not 0 <= pos[1] <= WINSIZE[1]:
 			vel[:], pos[:] = init_star()
 		else:
-			vel[0] *= 1.05
-			vel[1] *= 1.05
+			vel[0] = vel[0] * 1.05
+			vel[1] = vel[1] * 1.05
 	
 
 def main():
